examples/modules/nestedClient.wyv
import modules.outer.inner.mod
import modules.outer.friend

val y : mod.T = friend.x // OK

y + 1 // error
